# claims-pilot-agent

./: .gitignore  LICENSE  README.md
claim-pilot-ai/: Dockerfile  Makefile  README.md  env.example  pyproject.toml
claim-pilot-ai/.github/workflows/: ci.yml  publish.yml
claim-pilot-ai/eval/: golden_samples.jsonl  run_deepeval_eval.py  run_ragas_eval.py
claim-pilot-ai/src/claim_pilot_ai/: __init__.py  config.py
claim-pilot-ai/src/claim_pilot_ai/agents/: answer_agent.py  fraud_agent.py  heuristics.py  planner_agent.py  policy_agent.py
claim-pilot-ai/src/claim_pilot_ai/api/: main.py  schemas.py
claim-pilot-ai/src/claim_pilot_ai/bedrock/: client.py  knowledge_base.py
claim-pilot-ai/src/claim_pilot_ai/dspy_modules/: __init__.py  coverage.py
claim-pilot-ai/src/claim_pilot_ai/ingestion/: __init__.py  docling_parse.py
claim-pilot-ai/src/claim_pilot_ai/llm/: __init__.py  litellm_client.py
claim-pilot-ai/src/claim_pilot_ai/mcp/: mcp_client.py
claim-pilot-ai/src/claim_pilot_ai/workflows/: insurance_rag_graph.py
claim-pilot-ai/tests/: conftest.py  test_config.py  test_dspy_coverage_unit.py  test_heuristics.py  test_litellm_client.py  test_workflow.py
claim-pilot-ai/tests/eval/: test_deepeval_smoke.py
claim-pilot-backend/: Dockerfile  Makefile  README.md  env.example  pyproject.toml
claim-pilot-backend/.github/workflows/: ci.yml
claim-pilot-backend/scripts/: test_coverage_check.sh
claim-pilot-backend/src/claim_pilot_backend/app/: main.py
claim-pilot-backend/src/claim_pilot_backend/app/api/v1/: agentic_rag.py
claim-pilot-backend/src/claim_pilot_backend/app/core/: config.py
claim-pilot-backend/src/claim_pilot_backend/app/schemas/: agentic_rag.py
claim-pilot-backend/tests/: conftest.py  test_rag_service.py
claim-pilot-core/: Dockerfile  README.md  env.example  pyproject.toml
claim-pilot-core/src/claim_pilot_backend/: __init__.py
claim-pilot-core/src/claim_pilot_backend/app/services/: rag_service.py
claim-pilot-core/tests/: test_config.py
claim-pilot-frontend/: README.md
claim-pilot-frontend/src/lib/: api.ts
claim-pilot-infrastructure/: README.md
claim-pilot-infrastructure/.github/workflows/: ci.yml
claim-pilot-infrastructure/terraform/environments/dev/: main.tf  outputs.tf  variables.tf
claim-pilot-infrastructure/terraform/modules/bedrock/: main.tf
claim-pilot-infrastructure/terraform/modules/cloudwatch/: main.tf
claim-pilot-infrastructure/terraform/modules/ecr/: main.tf
claim-pilot-infrastructure/terraform/modules/ecs/: main.tf
claim-pilot-infrastructure/terraform/modules/iam/: main.tf
claim-pilot-infrastructure/terraform/modules/opensearch/: main.tf
claim-pilot-infrastructure/terraform/modules/rds/: main.tf
claim-pilot-infrastructure/terraform/modules/redis/: main.tf
claim-pilot-infrastructure/terraform/modules/s3/: main.tf
claim-pilot-infrastructure/terraform/modules/vpc/: main.tf
claim-pilot-logging/: Makefile  pyproject.toml
claim-pilot-logging/.github/workflows/: ci.yml
claim-pilot-logging/src/claim_pilot_logging/: __init__.py  config.py  context.py  formatters.py  logger.py  metrics.py  middleware.py  processors.py
claim-pilot-logging/tests/: test_config.py  test_context.py  test_logger.py  test_metrics.py  test_version.py
claim-pilot-mcp-server/: Dockerfile  README.md  pyproject.toml
docs/: claim-pilot-tech-stack-interview-prep.html
