[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-pilot-ai"
version = "2026.05.1"
description = "Agentic RAG workflow service for insurance coverage analysis with AWS Bedrock"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Martins Ajibade", email = "majibade44627@ucumberlands.edu" }
]

keywords = ["insurance", "rag", "agents", "bedrock", "langchain", "claims"]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.11"

dependencies = [
    "claim-pilot-core @ git+https://github.com/MartinsAjibade/claims-pilot-agent.git@main",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "boto3>=1.35.98",
    "langchain>=0.3.14",
    "langgraph>=0.2.61",
    "langchain-aws>=0.2.10",
    "httpx>=0.28.1",
    "dspy-ai>=2.5.0",
    "litellm>=1.53.0",
]

[project.optional-dependencies]

docling = [
    "docling>=2.15.0",
]

eval = [
    "ragas>=0.1.8",
    "deepeval>=2.0.0",
    "datasets>=3.0.0",
    "langchain-community>=0.3.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/MartinsAjibade/claims-pilot-agent"
Issues = "https://github.com/MartinsAjibade/claims-pilot-agent/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/claim_pilot_ai"]

[tool.hatch.build.targets.sdist]
include = ["src/claim_pilot_ai"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

markers = [
    "eval: offline or LLM-backed evaluation (may require RUN_EVAL_TESTS and AWS)",
]