[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-pilot-backend"
version = "2026.05.1"
description = "FastAPI gateway for insurance coverage analysis - routes requests to AI service"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Claim Pilot Team", email = "team@claim-pilot.com" }
]
keywords = ["insurance", "fastapi", "gateway", "claims"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "claim-pilot-core @ git+https://github.com/Ihttps://github.com/MartinsAjibade/claims-pilot-agent/tree/main/claim-pilot-core",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "boto3>=1.35.98",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/MartinsAjibade/claims-pilot-agent/tree/main/claim-pilot-backend"
Issues = "https://github.com/MartinsAjibade/claims-pilot-agent/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/claim_pilot_backend"]

[tool.hatch.build.targets.sdist]
include = ["src/claim_pilot_backend"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
