[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-pilot-logging"
version = "2026.05.1"
description = "Structured logging for Claim Pilot platform — JSON output, correlation IDs, metrics, middleware"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Claim Pilot Team", email = "team@claim-pilot.com" }
]
keywords = ["logging", "structured", "json", "tracing", "insurance", "claim-pilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0.0",
    "python-json-logger>=2.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
fastapi = ["starlette>=0.27.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/MartinsAjibade/claims-pilot-agent/tree/main/claim-pilot-backend"
Issues = "https://github.com/MartinsAjibade/claims-pilot-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claim_pilot_logging"]

[tool.hatch.build.targets.sdist]
include = ["src/claim_pilot_logging"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
